Conversão dos elementos em custom elements

--- a/index.html
+++ b/index.html
@@ -24,275 +24,19 @@
         <button>Adicionar RNF</button>
         <button>Adicionar RN</button>
     </fieldset>
+    
     <fieldset id="requisitosFuncionais" class="requisitos_regras">
         <legend>Requisitos Funcionais (RF)</legend>
-        <div id="RF1" class="requisito_regra RF">
-            <h3>{ID}</h3>
-            <div>
-                <label for="nome">Nome:</label>
-                <input type="text" name="nome" id="nome">
-            </div>
-            <div>
-                <label for="descricao">Descrição:</label>
-                <input type="text" name="descricao" id="descricao">
-            </div>
-            <div>
-                <label for="origem">Origem:</label>
-                <input type="text" name="origem" id="origem">
-            </div>
-            <div>
-                <label for="responsavel">Responsável:</label>
-                <input type="text" name="responsavel" id="responsavel">
-            </div>
-            <div>
-                <label for="Interessados">Interessados:</label>
-                <input type="text" name="Interessados" id="Interessados">
-            </div>
-            <div>
-                <label for="prioridade">Prioridade:</label>
-                <select name="prioridade">
-                    <option value="Desejável" selected>Desejável</option>
-                    <option value="Importante">Importante</option>
-                    <option value="Imprescindível">Imprescindível</option>
-                </select>
-            </div>
-            <fieldset>
-                <legend>Dependências:</legend>
-                <style>
-                    #divSpanDepenID{
-                        font-size: small;
-                        background-color: #6eda2c;
-                        border-radius: 10%;
-                        max-width: fit-content;
-                        padding: 5px 5px;
-                        margin: 5px
-                    }
-                    #divDepenID{
-                        display: flex;
-                        flex-wrap: wrap;
-                    }
-                </style>
-                <div id="divDepenID">
-                    <div id="divSpanDepenID">
-                        <span>{ID 0}</span>
-                    </div>
-                </div>
-                <input type="text" name="dependencia" id="dependenciaINPUT">
-            </fieldset>
-            <fieldset>
-                <legend>Conflitos:</legend>
-                <style>
-                    #divSpanConfliID{
-                        font-size: small;
-                        background-color: #da0001;
-                        border-radius: 10%;
-                        max-width: fit-content;
-                        padding: 5px 5px;
-                        margin: 5px
-                    }
-                    #divConfliID{
-                        display: flex;
-                        flex-wrap: wrap;
-                    }
-                </style>
-                <div id="divConfliID">
-                    <div id="divSpanConfliID">
-                        <span>{ID 0}</span>
-                    </div>
-                </div>
-                <input type="text" name="dependencia" id="dependenciaINPUT">
-            </fieldset>
-            <script>
-                function show({id}){
-                    var node = document.getElementById(id);
-                    if (node.parentNode) {
-                        node.parentNode.removeChild(node);
-                    }
-                }
-            </script>
-            <button onclick="show(this.parentElement)">Remover</button>
-            </div>
-        </div>
+        <r-f></r-f>
     </fieldset>
-    <fieldset id="requisitosNaoFuncionais" class="requisitos_regras">
-        <legend>Requisitos Não Funcionais (RNF)</legend>
-        <div id="RNF1" class="requisito_regra RNF">
-            <h3>{ID}</h3>
-            <div>
-                <label for="nome">Nome:</label>
-                <input type="text" name="nome" id="nome">
-            </div>
-            <div>
-                <label for="descricao">Descrição:</label>
-                <input type="text" name="descricao" id="descricao">
-            </div>
-            <div>
-                <label for="origem">Origem:</label>
-                <input type="text" name="origem" id="origem">
-            </div>
-            <div>
-                <label for="responsavel">Responsável:</label>
-                <input type="text" name="responsavel" id="responsavel">
-            </div>
-            <div>
-                <label for="Interessados">Interessados:</label>
-                <input type="text" name="Interessados" id="Interessados">
-            </div>
-            <div>
-                <label for="prioridade">Prioridade:</label>
-                <select name="prioridade">
-                    <option value="Desejável" selected>Desejável</option>
-                    <option value="Importante">Importante</option>
-                    <option value="Imprescindível">Imprescindível</option>
-                </select>
-            </div>
-            <fieldset>
-                <legend>Dependências:</legend>
-                <style>
-                    #divSpanDepenID{
-                        font-size: small;
-                        background-color: #6eda2c;
-                        border-radius: 10%;
-                        max-width: fit-content;
-                        padding: 5px 5px;
-                        margin: 5px
-                    }
-                    #divDepenID{
-                        display: flex;
-                        flex-wrap: wrap;
-                    }
-                </style>
-                <div id="divDepenID">
-                    <div id="divSpanDepenID">
-                        <span>{ID 0}</span>
-                    </div>
-                </div>
-                <input type="text" name="dependencia" id="dependenciaINPUT">
-            </fieldset>
-            <fieldset>
-                <legend>Conflitos:</legend>
-                <style>
-                    #divSpanConfliID{
-                        font-size: small;
-                        background-color: #da0001;
-                        border-radius: 10%;
-                        max-width: fit-content;
-                        padding: 5px 5px;
-                        margin: 5px
-                    }
-                    #divConfliID{
-                        display: flex;
-                        flex-wrap: wrap;
-                    }
-                </style>
-                <div id="divConfliID">
-                    <div id="divSpanConfliID">
-                        <span>{ID 0}</span>
-                    </div>
-                </div>
-                <input type="text" name="dependencia" id="dependenciaINPUT">
-            </fieldset>
-            <script>
-                function show({id}){
-                    var node = document.getElementById(id);
-                    if (node.parentNode) {
-                        node.parentNode.removeChild(node);
-                    }
-                }
-            </script>
-            <button onclick="show(this.parentElement)">Remover</button>
-            </div>
-        </div>
+    <fieldset id="requisitosFuncionais" class="requisitos_regras">
+        <legend>Requisitos Não Funcionais (RF)</legend>
+        <r-n-f></r-n-f>
     </fieldset>
-    <fieldset id="regrasDeNegocio" class="requisitos_regras">
+    <fieldset id="requisitosFuncionais" class="requisitos_regras">
         <legend>Regras de Negócio (RN)</legend>
-        <div id="RN1" class="requisito_regra RN">
-            <h3>{ID}</h3>
-            <div>
-                <label for="nome">Nome:</label>
-                <input type="text" name="nome" id="nome">
-            </div>
-            <div>
-                <label for="descricao">Descrição:</label>
-                <input type="text" name="descricao" id="descricao">
-            </div>
-            <div>
-                <label for="origem">Origem:</label>
-                <input type="text" name="origem" id="origem">
-            </div>
-            <div>
-                <label for="responsavel">Responsável:</label>
-                <input type="text" name="responsavel" id="responsavel">
-            </div>
-            <div>
-                <label for="Interessados">Interessados:</label>
-                <input type="text" name="Interessados" id="Interessados">
-            </div>
-            <div>
-                <label for="prioridade">Prioridade:</label>
-                <select name="prioridade">
-                    <option value="Desejável" selected>Desejável</option>
-                    <option value="Importante">Importante</option>
-                    <option value="Imprescindível">Imprescindível</option>
-                </select>
-            </div>
-            <fieldset>
-                <legend>Dependências:</legend>
-                <style>
-                    #divSpanDepenID{
-                        font-size: small;
-                        background-color: #6eda2c;
-                        border-radius: 10%;
-                        max-width: fit-content;
-                        padding: 5px 5px;
-                        margin: 5px
-                    }
-                    #divDepenID{
-                        display: flex;
-                        flex-wrap: wrap;
-                    }
-                </style>
-                <div id="divDepenID">
-                    <div id="divSpanDepenID">
-                        <span>{ID 0}</span>
-                    </div>
-                </div>
-                <input type="text" name="dependencia" id="dependenciaINPUT">
-            </fieldset>
-            <fieldset>
-                <legend>Conflitos:</legend>
-                <style>
-                    #divSpanConfliID{
-                        font-size: small;
-                        background-color: #da0001;
-                        border-radius: 10%;
-                        max-width: fit-content;
-                        padding: 5px 5px;
-                        margin: 5px
-                    }
-                    #divConfliID{
-                        display: flex;
-                        flex-wrap: wrap;
-                    }
-                </style>
-                <div id="divConfliID">
-                    <div id="divSpanConfliID">
-                        <span>{ID 0}</span>
-                    </div>
-                </div>
-                <input type="text" name="dependencia" id="dependenciaINPUT">
-            </fieldset>
-            <script>
-                function show({id}){
-                    var node = document.getElementById(id);
-                    if (node.parentNode) {
-                        node.parentNode.removeChild(node);
-                    }
-                }
-            </script>
-            <button onclick="show(this.parentElement)">Remover</button>
-            </div>
-        </div>
+        <r-n></r-n>
     </fieldset>
+    <script src="components.js"></script>
 </body>
 </html>
