--- a/index.html
+++ b/index.html
@@ -1,55 +1,97 @@
 <!DOCTYPE html>
 <html lang="pt_BR">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
-    <title>Make requirements</title>
-</head>
+    <head>
+        <meta charset="UTF-8" />
+        <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <link rel="stylesheet" href="style.css" />
+        <title>Make requirements</title>
+    </head>
 
-<script>    
-    function addRF(){
-        const requisitosFuncionais = document.getElementById("requisitosFuncionais")
-        const countId = requisitosFuncionais.childElementCount
-        RF = document.createElement("mr-rf")
-        RF.setAttribute("id", `RF${countId}`);
-        requisitosFuncionais.appendChild(RF)
-    }
-    function addRNF(){
-        const requisitosNaoFuncionais = document.getElementById("requisitosNaoFuncionais")
-        const countId = requisitosNaoFuncionais.childElementCount
-        RNF = document.createElement("mr-rnf")
-        RNF.setAttribute("id", `RNF${countId}`);
-        requisitosNaoFuncionais.appendChild(RNF)
-    }
-    function addRN(){
-        const regrasDeNegocio = document.getElementById("regrasDeNegocio")
-        const countId = regrasDeNegocio.childElementCount
-        RN = document.createElement("mr-rn")
-        RN.setAttribute("id", `RN${countId}`);
-        regrasDeNegocio.appendChild(RN)
-    }
-</script>
+    <script>
+        function addRF() {
+            const requisitosFuncionais = document.getElementById(
+                "requisitosFuncionais"
+            );
+            const countId = requisitosFuncionais.childElementCount;
+            RF = document.createElement("mr-rf");
+            RF.setAttribute("id", `RF${countId}`);
+            requisitosFuncionais.appendChild(RF);
+        }
+        function addRNF() {
+            const requisitosNaoFuncionais = document.getElementById(
+                "requisitosNaoFuncionais"
+            );
+            const countId = requisitosNaoFuncionais.childElementCount;
+            RNF = document.createElement("mr-rnf");
+            RNF.setAttribute("id", `RNF${countId}`);
+            requisitosNaoFuncionais.appendChild(RNF);
+        }
+        function addRN() {
+            const regrasDeNegocio = document.getElementById("regrasDeNegocio");
+            const countId = regrasDeNegocio.childElementCount;
+            RN = document.createElement("mr-rn");
+            RN.setAttribute("id", `RN${countId}`);
+            regrasDeNegocio.appendChild(RN);
+        }
+        const callConfig = () => alert("Configuração");
+        const callExport = () => alert("Exportação");
+    </script>
 
+    <body>
+        <div id="control-general">
+            <svg
+                id="gear"
+                xmlns="http://www.w3.org/2000/svg"
+                width="1.5em"
+                height="1.5em"
+                preserveAspectRatio="xMidYMid meet"
+                viewBox="0 0 24 24"
+                onclick="callConfig()"
+            >
+                <g fill="none">
+                    <path
+                        d="M14 3.269C14 2.568 13.432 2 12.731 2H11.27C10.568 2 10 2.568 10 3.269v0c0 .578-.396 1.074-.935 1.286c-.085.034-.17.07-.253.106c-.531.23-1.162.16-1.572-.249v0a1.269 1.269 0 0 0-1.794 0L4.412 5.446a1.269 1.269 0 0 0 0 1.794v0c.41.41.48 1.04.248 1.572a7.946 7.946 0 0 0-.105.253c-.212.539-.708.935-1.286.935v0C2.568 10 2 10.568 2 11.269v1.462C2 13.432 2.568 14 3.269 14v0c.578 0 1.074.396 1.286.935c.034.085.07.17.105.253c.231.531.161 1.162-.248 1.572v0a1.269 1.269 0 0 0 0 1.794l1.034 1.034a1.269 1.269 0 0 0 1.794 0v0c.41-.41 1.04-.48 1.572-.249c.083.037.168.072.253.106c.539.212.935.708.935 1.286v0c0 .701.568 1.269 1.269 1.269h1.462c.701 0 1.269-.568 1.269-1.269v0c0-.578.396-1.074.935-1.287c.085-.033.17-.068.253-.104c.531-.232 1.162-.161 1.571.248v0a1.269 1.269 0 0 0 1.795 0l1.034-1.034a1.269 1.269 0 0 0 0-1.794v0c-.41-.41-.48-1.04-.249-1.572c.037-.083.072-.168.106-.253c.212-.539.708-.935 1.286-.935v0c.701 0 1.269-.568 1.269-1.269V11.27c0-.701-.568-1.269-1.269-1.269v0c-.578 0-1.074-.396-1.287-.935a7.755 7.755 0 0 0-.105-.253c-.23-.531-.16-1.162.249-1.572v0a1.269 1.269 0 0 0 0-1.794l-1.034-1.034a1.269 1.269 0 0 0-1.794 0v0c-.41.41-1.04.48-1.572.249a7.913 7.913 0 0 0-.253-.106C14.396 4.343 14 3.847 14 3.27v0z"
+                        stroke="currentColor"
+                        stroke-width="2"
+                    />
+                    <path
+                        d="M16 12a4 4 0 1 1-8 0a4 4 0 0 1 8 0z"
+                        stroke="currentColor"
+                        stroke-width="2"
+                    />
+                </g>
+            </svg>
+            <svg
+                id="export"
+                xmlns="http://www.w3.org/2000/svg"
+                width="1.5em"
+                height="1.5em"
+                viewBox="0 0 20 20"
+                onclick="callExport()"
+            >
+                <path
+                    d="M15 15H2V6h2.595s.689-.896 2.17-2H1a1 1 0 0 0-1 1v11a1 1 0 0 0 1 1h15a1 1 0 0 0 1-1v-3.746l-2 1.645V15zm-1.639-6.95v3.551L20 6.4l-6.639-4.999v3.131C5.3 4.532 5.3 12.5 5.3 12.5c2.282-3.748 3.686-4.45 8.061-4.45z"
+                    fill="currentColor"
+                />
+            </svg>
+        </div>
+        <fieldset id="controle">
+            <legend>Controles</legend>
+            <button onclick="addRF()">Adicionar RF</button>
+            <button onclick="addRNF()">Adicionar RNF</button>
+            <button onclick="addRN()">Adicionar RN</button>
+        </fieldset>
 
-<body>
-    <fieldset id="controle">
-        <legend>Controles</legend>
-        <button onclick="addRF()">Adicionar RF</button>
-        <button onclick="addRNF()">Adicionar RNF</button>
-        <button onclick="addRN()">Adicionar RN</button>
-    </fieldset>
-    
-    <fieldset id="requisitosFuncionais" class="requisitos_regras">
-        <legend>Requisitos Funcionais (RF)</legend>
-    </fieldset>
-    <fieldset id="requisitosNaoFuncionais" class="requisitos_regras">
-        <legend>Requisitos Não Funcionais (RNF)</legend>
-    </fieldset>
-    <fieldset id="regrasDeNegocio" class="requisitos_regras">
-        <legend>Regras de Negócio (RN)</legend>
-    </fieldset>
-    <script src="components.js"></script>
-</body>
+        <fieldset id="requisitosFuncionais" class="requisitos_regras">
+            <legend>Requisitos Funcionais (RF)</legend>
+        </fieldset>
+        <fieldset id="requisitosNaoFuncionais" class="requisitos_regras">
+            <legend>Requisitos Não Funcionais (RNF)</legend>
+        </fieldset>
+        <fieldset id="regrasDeNegocio" class="requisitos_regras">
+            <legend>Regras de Negócio (RN)</legend>
+        </fieldset>
+        <script src="components.js"></script>
+    </body>
 </html>
