--- a/index.html
+++ b/index.html
@@ -53,8 +53,13 @@
         <div class="infoExport" title="Clique para fechar o painel de exportação">
             <button id="fechar">x</button>
             <pre></pre>
-            <button id="copiar">Copiar</button>
+            <fieldset id="fieldCopy" style="border-color: black; border-radius: 5px;">
+                <legend>Copiar</legend>
+                <button id="text" title="Copia os requisitos no formato texto.">Texto</button>
+                <button id="word" title="Copia os requisitos no formato de tabela para o word.">Word</button>
+            </fieldset>
         </div>
+        <div id="tables"></div>
         <script src="functions.js"></script>
         <script src="components.js"></script>
     </body>
